force-app/main/default/objects/WorkOrder__c/fields/Assigned_Employee__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders Assigned</relationshipLabel>
    <relationshipName>Work_Orders_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>