force-app/main/default/objects/WorkOrder__c/fields/Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration__c</fullName>
    <label>Planned Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>