force-app/main/default/objects/WorkOrder__c/fields/Planned_End__c.field-meta.xml
<CustomField>
    <fullName>Planned_End__c</fullName>
    <formula>Planned_Start__c  + ( Planned_Duration__c  / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned End</label>
    <type>DateTime</type>
</CustomField>