force-app/main/default/objects/WorkOrder__c/fields/Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start__c</fullName>
    <label>Planned Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>