force-app/main/default/objects/WorkOrder__c/validationRules/Date_order_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_order_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Planned_End__c &lt;= Planned_Start__c</errorConditionFormula>
    <errorMessage>Planned end must be after planned start.</errorMessage>
</ValidationRule>