force-app/main/default/objects/WorkOrder__c/validationRules/Visit_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Visit__c)</errorConditionFormula>
    <errorMessage>Work Order must be linked to a Visit.</errorMessage>
</ValidationRule>