force-app/main/default/objects/WorkOrder__c/listViews/All_WorkOrders_Service.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders_Service</fullName>
    <columns>NAME</columns>
    <columns>Visit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>All WorkOrders - Service</label>
</ListView>